# langchain-agents

./: .env.example  .gitignore  README.md  pyproject.toml
src/langchain_agents/: app.py
src/langchain_agents/adapters/: __init__.py  base.py  conversational_qa.py  gym_trainer.py
src/langchain_agents/conversational_qa_agent/: __init__.py  agent.py
src/langchain_agents/gym_trainer_agent/: __init__.py  agent.py  rag_creation.py
src/langchain_agents/gym_trainer_agent/data/: informe de diseño de rutina.md  optimized_gym_training.md  refactored_gym_training.md  refactored_informe_rutina.md
